Adds robots deny statements

--- a/elements.html
+++ b/elements.html
@@ -9,6 +9,7 @@
   <title>Elements - Stellar by HTML5 UP</title>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
+  <meta name="robots" content="noindex, nofollow, noarchive, nosnippet, noimageindex">
   <link rel="stylesheet" href="assets/css/main.min.css"/>
   <noscript>
     <link rel="stylesheet" href="assets/css/noscript.min.css"/>
