--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>Stefan Link | Freier Garten- und Landschaftsarchitekt</title>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
+  <meta name="robots" content="noindex, nofollow, noarchive, nosnippet, noimageindex">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400"/>
   <link rel="stylesheet" href="assets/css/main.min.css"/>
   <noscript>
