Adds images for the last 4 boxes

--- a/index.html
+++ b/index.html
@@ -216,45 +216,57 @@
         Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
       <ul class="statistics">
         <li class="slider-box style4">
-          <a href="#" target="_blank">
+          <a href="https://photos.app.goo.gl/QrMCLpPyLYP7F8j12" target="_blank">
             <span class="slider">
               <span style="background-image: url('images/slider/hausgaerten/HG03_2047_01.JPG')"></span>
-              <img src data-src="images/slider/hausgaerten/HG04_2065_01.JPG" alt="" />
-              <img src data-src="images/slider/hausgaerten/HG04_2065_02_B.JPG" alt=""/>
+              <img src data-src="images/slider/schulen/Sch_1023_03.JPG" alt="" />
+              <img src data-src="images/slider/schulen/Sch_1014_01.JPG" alt="" />
+              <img src data-src="images/slider/schulen/Sch_1014_08.JPG" alt="" />
+              <img src data-src="images/slider/schulen/Sch_1023_08.JPG" alt=""/>
+              <img src data-src="images/slider/schulen/Sch_1023_03.JPG" alt=""/>
               <span style="background-image: url('images/slider/hausgaerten/HG03_2047_01.JPG')"></span>
             </span>
             <span class="legend">Schulen</span>
           </a>
         </li>
         <li class="slider-box style3">
-          <a href="#" target="_blank">
+          <a href="https://photos.app.goo.gl/DDTTsuEi7DfAvnbH3" target="_blank">
             <span class="slider">
-              <span style="background-image: url('images/slider/wohnumfeld/WU_2152_01.JPG')"></span>
-              <img src data-src="images/slider/wohnumfeld/WU_2152_04.JPG" alt="" />
-              <img src data-src="images/slider/wohnumfeld/WU_2152_05.JPG" alt="" />
-              <span style="background-image: url('images/slider/wohnumfeld/WU_2152_01.JPG')"></span>
+              <span style="background-image: url('images/slider/gewerbe/G02_2085_02_B.JPG')"></span>
+              <img src data-src="images/slider/gewerbe/G03_2105_02.JPG" alt="" />
+              <img src data-src="images/slider/gewerbe/G04_2129_14.JPG" alt="" />
+              <img src data-src="images/slider/gewerbe/G04_2129_19.JPG" alt="" />
+              <img src data-src="images/slider/gewerbe/G04_2129_21.JPG" alt="" />
+              <img src data-src="images/slider/gewerbe/G04_2129_38.JPG" alt="" />
+              <img src data-src="images/slider/gewerbe/G04_2129_31.JPG" alt="" />
+              <img src data-src="images/slider/gewerbe/G05_2155_12.JPG" alt="" />
+              <img src data-src="images/slider/gewerbe/G02_2085_02_B.JPG" alt="" />
+              <span style="background-image: url('images/slider/gewerbe/G02_2085_02_B.JPG')"></span>
             </span>
             <span class="legend">Gewerbe</span>
           </a>
         </li>
         <li class="slider-box style2">
-          <a href="#" target="_blank">
+          <a href="https://photos.app.goo.gl/CZpnmQFIY2RDTYF32" target="_blank">
             <span class="slider">
-              <span style="background-image: url('images/slider/kindergearten/KG_1054_02.JPG')"></span>
-              <img src data-src="images/slider/kindergearten/KG_1052_01.JPG" alt="" />
-              <img src data-src="images/slider/kindergearten/KG_1054_06.JPG" alt="" />
-              <span style="background-image: url('images/slider/kindergearten/KG_1054_02.JPG')"></span>
+              <span style="background-image: url('images/slider/landschaftsplanung/L_1001_01.jpg')"></span>
+              <img src data-src="images/slider/landschaftsplanung/L_1001_02.jpg" alt="" />
+              <img src data-src="images/slider/landschaftsplanung/L_1002_05.JPG" alt="" />
+              <img src data-src="images/slider/landschaftsplanung/L_1001_01.jpg" alt="" />
+              <span style="background-image: url('images/slider/landschaftsplanung/L_1001_01.jpg')"></span>
             </span>
             <span class="legend">Landschaftsplanung</span>
           </a>
         </li>
         <li class="slider-box style1">
-          <a href="#" target="_blank">
+          <a href="https://photos.app.goo.gl/9w0JukyacIMnpLnL2" target="_blank">
             <span class="slider">
-              <span style="background-image: url('images/slider/spielplaetze/KSP_2176_02.JPG')"></span>
-              <img src data-src="images/slider/spielplaetze/KSP_1046_05_B.JPG" alt="" />
-              <img src data-src="images/slider/spielplaetze/KSP_1008_03.JPG" alt="" />
-              <span style="background-image: url('images/slider/spielplaetze/KSP_2176_02.JPG')"></span>
+              <span style="background-image: url('images/slider/freizeitanlagen/G01_1050_03.JPG')"></span>
+              <img src data-src="images/slider/freizeitanlagen/Z01.jpg" alt="" />
+              <img src data-src="images/slider/freizeitanlagen/Z02.jpg" alt="" />
+              <img src data-src="images/slider/freizeitanlagen/Z06.jpg" alt="" />
+              <img src data-src="images/slider/freizeitanlagen/Z09.jpg" alt="" />
+              <span style="background-image: url('images/slider/freizeitanlagen/G01_1050_03.JPG')"></span>
             </span>
             <span class="legend">Freizeitanlagen</span>
           </a>
