Refining style and images

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="assets/css/noscript.min.css"/>
   </noscript>
 </head>
-<body>
+<body class="is-preload">
 
 <div id="backdrop" style="background-image: url('images/house-garden-bg.jpg')">
   <img src="images/house-garden-bg.jpg" alt="Kulisse"/>
@@ -28,11 +28,11 @@
   <!-- Header -->
   <header id="header" class="alt">
     <h1>Stefan Link</h1>
-    <p>Dipl.-Ing. (FH)<br>
+    <p class="flex-1">Dipl.-Ing. (FH)<br>
       Freier Garten- und Landschaftsarchitekt</p>
 
-    <div id="portrait" style="background-image: url('images/stefan-transparentbg-shadow.png')">
-      <img src="images/stefan-transparentbg-shadow.png" alt="Stefan Link"/>
+    <div id="portrait" style="background-image: url('images/stefan-transparentbg-scaled-shadow.png')">
+      <img src="images/stefan-transparentbg-scaled-shadow.png" alt="Stefan Link"/>
     </div>
   </header>
 
