Refining image styles

--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
     <link rel="stylesheet" href="assets/css/noscript.min.css"/>
   </noscript>
 </head>
-<body class="is-preload">
+<body>
 
-<div id="backdrop" style="background-image: url('images/house-garden-bg.jpg')">
-  <img src="images/house-garden-bg.jpg" alt="Kulisse"/>
+<div id="backdrop" class="is-preload"
+     style="background-image: url('images/house-garden-bg.jpg')">
+  <img src="images/house-garden-bg.jpg" alt="Kulisse" />
 </div>
 
 <!-- Wrapper -->
@@ -32,7 +33,7 @@
       Freier Garten- und Landschaftsarchitekt</p>
 
     <div id="portrait" style="background-image: url('images/stefan-transparentbg-scaled-shadow.png')">
-      <img src="images/stefan-transparentbg-scaled-shadow.png" alt="Stefan Link"/>
+      <img src="images/stefan-transparentbg-scaled-shadow.png" alt="Stefan Link" />
     </div>
   </header>
 
@@ -125,15 +126,15 @@
       <header class="major">
         <h2>Leitbild</h2>
       </header>
-      <p class="align-left-medium-up"><span class="image left"><span class="legend style2">Aufgabe</span><img src="images/mission_statement/HG04_2065_01.JPG" alt=""></span>Der gestaltete grüne 'Freiraum' spiegelt immer unsere Auseinandersetzung mit dem Ort, den Wünschen an
+      <p class="align-left-medium-up"><span class="image left style2"><span class="legend">Aufgabe</span><img src="images/mission_statement/HG04_2065_01.JPG" alt=""></span>Der gestaltete grüne 'Freiraum' spiegelt immer unsere Auseinandersetzung mit dem Ort, den Wünschen an
         Benutzbarkeit und den Kräften wieder, die bei der Realisierung mitgewirkt haben.<br/><br/>Es ist Aufgabe des Garten- und Landschaftsarchitekten durch enge Zusammenarbeit mit allen Beteiligten unter
         den gegebenen Rahmenbedingungen nach den besten Gestaltungsmöglichkeiten und einer optimalen Lösung für das
         Projekt zu suchen.</p>
-      <p class="align-right-medium-up"><span class="image right"><span class="legend style3">Anspruch</span><img src="images/mission_statement/G04_2129_07.JPG" alt=""></span>Im Mittelpunkt unserer Projektbearbeitung stehen Mensch und Umwelt. Ehrliche Beratung, sinnvolle Planung
+      <p class="align-right-medium-up"><span class="image right style3"><span class="legend">Anspruch</span><img src="images/mission_statement/G04_2129_07.JPG" alt=""></span>Im Mittelpunkt unserer Projektbearbeitung stehen Mensch und Umwelt. Ehrliche Beratung, sinnvolle Planung
         und kompetente Bauleitung sind selbstverständlich.<br/><br/>Ziel ist es, dass von vornherein Kosten eingehalten, Nerven geschont und Ideen verwirklicht werden.
         Außerdem werden durch umsichtige und andauernde Kontrolle unangenehme Spätfolgen vermieden. Zugegebenermaßen
         eine schwere Aufgabe, aber nicht unlösbar.</p>
-      <p class="align-left-medium-up"><span class="image left"><span class="legend style4">Angebot</span><img src="images/mission_statement/KSP_2176_02.JPG" alt=""></span>Ich verstehe mich als Dienstleister, der Sie im Bereich Gartengestaltung, Freianlagenplanung und
+      <p class="align-left-medium-up"><span class="image left style4"><span class="legend">Angebot</span><img src="images/mission_statement/KSP_2176_02.JPG" alt=""></span>Ich verstehe mich als Dienstleister, der Sie im Bereich Gartengestaltung, Freianlagenplanung und
         Landschaftsplanung in allen Leistungsphasen der HOAI betreut und unterstützt.<br/><br/>Sie haben somit nur einen Ansprech- und Vertragspartner der die im Bauprozess eingebundenen Beteiligten
         kontrolliert und überwacht.</p>
     </section>
