--- a/generic.html
+++ b/generic.html
@@ -59,34 +59,33 @@
 
   <!-- Footer -->
   <footer id="footer">
+    <!-- @see https://www.gesetze-im-internet.de/tmg/__5.html -->
+    <!-- @see https://www.haid-architektur.com/profil/berufsrechtliche-angaben -->
     <section>
-      <h2>Aliquam sed mauris</h2>
-      <p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore
-        veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae
-        tincidunt odio.</p>
-      <ul class="actions">
-        <li><a href="#" class="button">Learn More</a></li>
-      </ul>
+      <h2>Impressum</h2>
+      <p>Verantwortlich im Sinne des TMG §5</p>
+      <p>Stefan Link<br/>
+        Architekt in der <a href="https://www.akbw.de/" target="_blank">Architektenkammer BW</a><br>
+        USt-IdNr: <i>hier einsetzen!</i>
+      </p>
     </section>
     <section>
-      <h2>Etiam feugiat</h2>
+      <div class="h2 hidden-small-down">&nbsp;</div>
       <dl class="alt">
-        <dt>Address</dt>
-        <dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
-        <dt>Phone</dt>
-        <dd>(000) 000-0000 x 0000</dd>
-        <dt>Email</dt>
-        <dd><a href="#">information@untitled.tld</a></dd>
+        <dt>Anschrift</dt>
+        <dd>Manosquer Straße 11/2<br>70771 Leinfelden-Echterdingen</dd>
+        <dt>Telefon</dt>
+        <dd><a href="tel:+497117541149">0711 / 7 54 11 49</a></dd>
+        <dt>E-Mail</dt>
+        <dd><a href="mailto:info@stefan-link.de">info@stefan-link.de</a></dd>
       </dl>
-      <ul class="icons">
-        <li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
-        <li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-        <li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-        <li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-        <li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
-      </ul>
     </section>
-    <p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+    <div>
+      <ul class="actions">
+        <li><a href="rechtliche-hinweise.html" class="button">Rechtliche Hinweise</a></li>
+      </ul>
+    </div>
+    <p class="copyright">&copy;Stefan Link 2021-heute. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
   </footer>
 
 </div>
