--- a/index.html
+++ b/index.html
@@ -23,19 +23,20 @@
   <img src="images/house-garden-bg.jpg" alt="Kulisse" />
 </div>
 
+<!-- Header -->
+<header id="header" class="alt">
+  <h1>Stefan Link</h1>
+  <p class="flex-1">Dipl.-Ing. (FH)<br>
+    Freier Garten- und Landschaftsarchitekt</p>
+  <div id="portrait">
+    <div><div>
+      <img src="images/stefan-transparentbg-scaled-shadow.png" alt="Stefan Link" />
+    </div></div>
+  </div>
+</header>
+
 <!-- Wrapper -->
 <div id="wrapper">
-
-  <!-- Header -->
-  <header id="header" class="alt">
-    <h1>Stefan Link</h1>
-    <p class="flex-1">Dipl.-Ing. (FH)<br>
-      Freier Garten- und Landschaftsarchitekt</p>
-
-    <div id="portrait" style="background-image: url('images/stefan-transparentbg-scaled-shadow.png')">
-      <img src="images/stefan-transparentbg-scaled-shadow.png" alt="Stefan Link" />
-    </div>
-  </header>
 
   <!-- Main -->
   <div id="main">
