--- a/elements.html
+++ b/elements.html
@@ -416,10 +416,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 </div>
 
 <!-- Scripts -->
-<script src="assets/js/browser.min.js"></script>
-<script src="assets/js/breakpoints.min.js"></script>
-<!--<script src="assets/js/util.js"></script>-->
-<script src="assets/js/main.js"></script>
+<script src="assets/js/main.min.js"></script>
 
 </body>
 </html>
