--- a/index.html
+++ b/index.html
@@ -307,11 +307,7 @@
 </div>
 
 <!-- Scripts -->
-<script src="assets/js/browser.min.js"></script>
-<script src="assets/js/breakpoints.min.js"></script>
-<script src="assets/js/smoothscroll.min.js"></script>
-<!--<script src="assets/js/util.js"></script>-->
-<script src="assets/js/main.js"></script>
+<script src="assets/js/main.min.js"></script>
 
 </body>
 </html>
