--- a/generic.html
+++ b/generic.html
@@ -12,9 +12,9 @@
 <meta name="robots" content="noindex, nofollow, noarchive, nosnippet, noimageindex">
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400"/>
-<link rel="stylesheet" href="/assets/css/main.min.css?59a7032366be65b236d955d1982d11d4"/>
+<link rel="stylesheet" href="assets/css/main.min.css?59a7032366be65b236d955d1982d11d4"/>
 <noscript>
-  <link rel="stylesheet" href="/assets/css/noscript.min.css?4236606c5270e35d188f122679e9e2d9"/>
+  <link rel="stylesheet" href="assets/css/noscript.min.css?4236606c5270e35d188f122679e9e2d9"/>
 </noscript>
 
 </head>
@@ -95,7 +95,7 @@
 </div>
 
 <!-- Scripts -->
-<script src="/assets/js/main.min.js?b39824107b208a3bd4431efec0e5dd3c"></script>
+<script src="assets/js/main.min.js?b047d5ab02463d4a8c891f5bbc149583"></script>
 
 
 </body>
